Alterações no swagger e Readme

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,17 @@
-PORT=
-DATABASE=
-JWTSECRET=
-JWTEXPIRE=
-RABBITMQ=
-SERVER=
+# .env
+
+# --- Configuração do Banco de Dados ---
+# Caso queira usar o Atlas, preencha a linha abaixo e comente a de baixo.
+# A senha deve ser "URL encoded" se tiver caracteres especiais como @, :, /, etc.
+DATABASE=mongodb+srv://<USUARIO>:<SENHA>@<ENDERECO_DO_CLUSTER>/<NOME_DO_BANCO>?retryWrites=true&w=majority
+# Caso queira rodar o mongo localmente com Docker Compose, comente a linha de cima e use esta.
+# DATABASE=mongodb://mongodb:27017/translations
+
+# --- Outras Configurações ---
+RABBITMQ=amqp://rabbitmq:5672
+
+PORT=4040
+SERVER=http://localhost:4040
+
+JWTSECRET=seu-super-segredo-aqui-troque-por-algo-seguro
+JWTEXPIRE=1h
