--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "swagger:watch": "node --watch api/swagger.js"
   },
   "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.1",
     "amqplib": "~0.10.7",
+    "body-parser": "^2.2.0",
     "compression": "1.8.0",
     "cors": "2.8.5",
     "dotenv": "16.4.7",
-    "express": "4.21.2",
+    "express": "^4.21.2",
     "helmet": "8.0.0",
     "http-status": "2.1.0",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.10.1",
     "morgan": "1.10.0",
-    "swagger-ui-express": "5.0.1",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "~11.1.0",
     "yup": "1.6.1"
   },
